--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
-version: '3.4'
+version: '3'
 
 services:
-    web:
-        build: .
-        command: python -m http.server 8080
-        volumes:
-            - .:/code
-        ports:
-            - "80:8080"
+  proxy:
+    image: aldomonteiro
+    build:
+      context: .
+    ports:
+      - "80:80"
+    networks:
+      - aldomonteiro
+
+networks: 
+  aldomonteiro:
+    driver: bridge
